--- a/hardware/Makefile
+++ b/hardware/Makefile
@@ -315,10 +315,11 @@ pre_trace:
 
 post_trace:
 	mkdir -p "$(result_dir)"
-	cp $(buildpath)/transcript "$(result_dir)/" | true
+	# cp $(buildpath)/transcript "$(result_dir)/" | true
 	cp $(traceresult) "$(result_dir)"
 	cp $(trace) "$(result_dir)"
 	$(python) $(ROOT_DIR)/scripts/gen_avg.py --folder "$(result_dir)" | tee $(result_dir)/avg.txt
+	$(python) $(ROOT_DIR)/scripts/gen_max.py --folder "$(result_dir)" | tee $(result_dir)/max.txt
 
 $(buildpath)/%.trace: $(buildpath)/%.dasm
 	mkdir -p $(tracepath)
