--- a/software/onnx/argmax_impl_2/Makefile
+++ b/software/onnx/argmax_impl_2/Makefile
@@ -1,16 +1,11 @@
+NUM_CORES ?= 256
+
 LDFLAGS = -fopenmp
-CFLAGS = -D IS_MEMPOOL=0
+CFLAGS = -DIS_MEMPOOL=0 -DNUM_CORES_BENCH=$(NUM_CORES) -I../argmax_utils -I../commons -g -Og
 CC = gcc-11.2.0
 
-main: main.c data.h no_mempool.h
+main: main.c ../argmax_utils/data.h ../commons/no_mempool.h
 	${CC} ${CFLAGS} ${LDFLAGS} main.c -o main
-
-# Dirty soft link to not modify the omp Makefile
-data.h:
-	ln -s ../my_argmax_data/data.h data.h
-
-no_mempool.h:
-	ln -s ../my_argmax_data/no_mempool.h no_mempool.h
 
 dump: main
 	#objdump -d main > main.dump
@@ -20,4 +15,4 @@ run: main dump
 	./main
 
 clean:
-	rm -f data.h main main.dump no_mempool.h
+	rm -f main main.dump
